[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
package_name = "0.1.0"
serde = {version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.140"

cargo_toml = "0.22.1"

